--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub2.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub2.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
+<!-- Created with Jaspersoft Studio version 6.6.0.final utlizzo versione della libreria JasperReports5.1.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="m_inout_sub1" pageWidth="555" pageHeight="810" whenNoDataType="NoDataSection" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="c33fbd9b-fd01-4855-baf8-57a853bc8344">
 	<property name="ireport.zoom" value="1.6934217901613329"/>
 	<property name="ireport.x" value="0"/>
@@ -168,7 +168,7 @@ ORDER BY m_inoutline_line ASC]]>
 	<variable name="ddtlineamt1" class="java.math.BigDecimal" resetType="Page" calculation="Sum">
 		<variableExpression><![CDATA[$F{ddtlineamt}]]></variableExpression>
 	</variable>
-	<group name="Gruppo1" footerPosition="CollateAtBottom" keepTogether="true">
+	<group name="Gruppo1">
 		<groupExpression><![CDATA[$F{c_order_documentno}]]></groupExpression>
 		<groupHeader>
 			<band height="12">
@@ -427,7 +427,7 @@ ORDER BY m_inoutline_line ASC]]>
 		<band height="40">
 			<property name="com.jaspersoft.studio.layout"/>
 			<frame>
-				<reportElement stretchType="ContainerHeight" x="80" y="0" width="260" height="40" isRemoveLineWhenBlank="true" uuid="3c9380d4-b527-4695-a5fe-5f031f433c8e">
+				<reportElement stretchType="RelativeToBandHeight" x="80" y="0" width="260" height="40" isRemoveLineWhenBlank="true" uuid="3c9380d4-b527-4695-a5fe-5f031f433c8e">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 				</reportElement>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
